--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,9 +1,3 @@
-.hero-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .image {
     overflow: hidden;
     width: 100vh; /* Set the width to 100% of the viewport height */
@@ -24,78 +18,93 @@
     background-size: cover; /* Use cover to fill the container */
 }
 
-
-.home-intro{
-    text-align: center;
-    color: #fff;
-    font-size: 5rem;
-    left: 100px;
-    /* margin-top: 20vh; */
-}
-
-.home-intro p{
-    margin-bottom: 17px;
-    font-size: 1.5rem;
-    /* color: #fff; */
-    /* font-weight: lighter; */
-}
-
-.sec-letter{
-    width: 80vw;
+.hero-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: rgb(0, 0, 0);
+    position: relative; /* Add this to position the image container */
 }
 
-.signature{
+.home-intro {
+    text-align: center;
+    color: #fff;
+    font-size: 5rem;
+    /* left: 100px; */ /* Remove this line */
+}
+
+.home-intro p {
+    margin-bottom: 17px;
+    font-size: 1.5rem;
+}
+
+.sec-letter {
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    color: rgb(0, 0, 0);
+    text-align: left;
+    flex-wrap: wrap;
+}
+
+.signature {
     font-family: 'Alex Brush';
     font-size: 30px;
     margin: 0;
 }
 
-.info{
+.home-info {
     display: flex;
     flex-direction: row;
 }
 
-.text{
+.home-text {
     margin-left: 5vw;
     width: 40vw;
     display: flex;
     flex-direction: column;
 }
 
-.sec-gen-image{
+.sec-gen-image {
     width: 300px;
     height: 300px;
 }
 
-.contact-info{
+.contact-info {
     text-align: center;
     color: #fff;
     font-family: 'Playfair Regular 400 Italic', serif;
     font-weight: lighter;
     font-size: 0.9rem;
-    left: 100px;
+    /* left: 100px; */ /* Remove this line */
     margin-top: 35px;
 }
 
-.contact-info p{
+.contact-info p {
     margin-bottom: 17px;
-    /* color: #fff; */
-    /* font-weight: lighter; */
 }
 
-.ucbmun-image{
-    width: 25vw; /* Adjust the width as needed */
-    height: auto; /* This will maintain the aspect ratio */
-    margin-bottom: 20px; /* Adjust the margin as needed */
-
+.ucbmun-image {
+    width: 25vw;
+    height: auto;
+    margin-bottom: 20px;
 }
   
 
-@media screen and (max-width: 1560px) {
+@media screen and (max-width: 860px) {
+
+    .home-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .home-text{
+        margin-top: 5vh;;
+        margin-left: 0;
+        width: 80vw;
+    }
     /* .intro{
         text-align: center;
         color: #fff;
