--- a/src/components/LocationSchedule.css
+++ b/src/components/LocationSchedule.css
@@ -43,9 +43,9 @@
     margin-top: 20vh;
 }
 
-.intro p{
-    margin-bottom: 17px;
-    font-size: 1.5rem;
+.letter p{
+
+    width: 70vw;
     /* color: #fff; */
     /* font-weight: lighter; */
 }
@@ -54,6 +54,7 @@
 .page-title{
 text-align: center;
 }
+
 .day{
     display: flex;
     flex-direction: column;
@@ -69,7 +70,20 @@ text-align: center;
 
 .schedule{
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
+}
+
+
+.room{
+    display: flex;
+    flex-direction: column;
+    width: 40vw;
+    align-items: center;
+}
+
+.location{
+    display: flex;
+    /* flex-direction: row; */
 }
 
 .info{
@@ -123,39 +137,14 @@ text-align: center;
 }
   
 
-/* @media screen and (max-width: 760px) {
-    .intro{
-        text-align: center;
-        color: #fff;
-        font-family: 'Playfair Display Regular 400 Italic', serif;
-        font-style: italic;
-        font-weight: lighter;
-        font-size: 0.9rem;
-        left: 100px;
-        margin-top: -20px;
+@media screen and (max-width: 1060px) {
+    .schedule{
+        flex-direction: column;
+        align-items: center;
     }
 
-    .contact-info{
-        text-align: center;
-        color: #fff;
-        font-family: 'Playfair Display Regular 400 Italic', serif;
-        font-weight: lighter;
-        text-shadow: inset 0 0 0 1000px rgba(0,0,0,0);
-        font-size: 0.9rem;
-        margin-top: -40px;
+    .day{
+        width: 70vw;
+        margin-bottom: 5vh;
     }
-    
-    .contact-info p{
-        margin-bottom: 17px;
-        color: #fff;
-        font-weight: lighter;
-    }
-    .hero-container {
-        background: url('./images/ocean-image.jpg') center center/cover no-repeat;
-        width: 100%;
-        left: 000px;
-        display: flex;
-        flex-direction: column;
-        box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
-    }
-} */
+}
