--- a/src/components/Committee.css
+++ b/src/components/Committee.css
@@ -115,7 +115,6 @@
     color: rgb(0, 0, 0);
     font-size: 1.25rem;
     font-weight: 800;
-    padding: 0.5rem;
     width: 85%;
     /* display: flex;
     flex-direction: row; */
@@ -159,6 +158,16 @@
     width: 180px;
     height: 49px;
     font-size: 17px;
+  }
+
+  .chair{
+    text-align: left; /* Left align text */
+    color: rgb(100, 100, 100);
+    font-size: 0.75rem;
+    font-style: italic;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 85%;
   }
   
     
@@ -279,7 +288,6 @@
         color: rgb(0, 0, 0);
         font-size: 1.25rem;
         font-weight: 800;
-        padding: 0.5rem;
         /* display: flex;
         flex-direction: row; */
       }
