--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,4 +1,17 @@
-.image {
+.number-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .statistics-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 300px; /* Ensure the container takes the full height of the viewport */
+  }
+  
+  .image {
     overflow: hidden;
     width: 100vh; /* Set the width to 100% of the viewport height */
     height: 100%; /* Set the height to 100% of its container */
@@ -7,6 +20,7 @@
 }
 
 .image {
+    align-items: center;
     object-fit: cover;
     overflow: hidden;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
@@ -88,6 +102,37 @@
     width: 25vw;
     height: auto;
     margin-bottom: 20px;
+}
+
+.countdown-container{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+.countdown{
+    color: white;
+    align-items: center;
+    font-size: 2.75rem;
+    max-width: 400;
+    
+}
+
+.home-section {
+    width: 100%;
+    margin-left: 15px;
+    margin-right: 15px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.home-time{
+    color: white;
+    font-size: 1rem;
+    max-width: 4700px;
+    display: flex;
 }
   
 
