--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -127,7 +127,7 @@
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease-out;
-      background: rgb(195, 207, 227);
+      background: #c3cfe3;
       z-index: 1;
       align-content: center;
       text-align: center;
