fixed home responsiveness

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -20,14 +20,19 @@
 }
 
 .image {
+    display: flex;
     align-items: center;
     object-fit: cover;
     overflow: hidden;
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .3);
     width: 100%;
-    height: 500px; /* Set the height to 100% of its container */
+    height: 500px;
     position: relative;
     z-index: -1;
+    background-size: cover;
+    flex-direction: column;
+    justify-content: center;
+
     background: url('./images/berkeley-home.jpg') center center;
     background-size: cover; /* Use cover to fill the container */
 }
@@ -40,6 +45,8 @@
 }
 
 .home-intro {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     color: #fff;
     font-size: 5rem;
@@ -133,6 +140,11 @@
     font-size: 1rem;
     max-width: 4700px;
     display: flex;
+}
+
+.words{
+    display: flex;
+    flex-direction: column;
 }
   
 
