--- a/src/components/LocationSchedule.css
+++ b/src/components/LocationSchedule.css
@@ -43,7 +43,6 @@
 }
 
 .letter p{
-
     width: 70vw;
     /* color: #fff; */
     /* font-weight: lighter; */
@@ -114,6 +113,10 @@ text-align: center;
 
 .letter{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .contact-info p{
