--- a/src/components/Committee.css
+++ b/src/components/Committee.css
@@ -1,4 +1,5 @@
 .committees {
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center; /* Align items in the center horizontally */
