--- a/src/components/Committee.css
+++ b/src/components/Committee.css
@@ -199,14 +199,6 @@
   .com-icon {
    display: none;
   }
-  
-  .com-menu {
-  display: none;
-}
-
-.com-menu.active {
-  display: block;
-}
 
 .com-menu li {
   list-style-type: none;
@@ -214,12 +206,23 @@
 
 /* Remove the mobile-specific styles and keep the default styles for desktop */
 .com-menu {
-  display: none;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+  opacity: 1;
+  transition: all 0.5s ease-out;
+  z-index: 1;
+  align-content: center;
+  text-align: left;
+  margin-top: 20px;
 }
 
-/* Keep the default styles for desktop */
 .com-menu.active {
-  display: block;
+  left: 0;
+  opacity: 0.9;
+  transition: all 0.5s ease;
+  height: auto; /* Changed height to auto for mobile */
 }
 
     
@@ -352,37 +355,22 @@
       }
 
     
-        .com-icon {
-          display: flex; /* Show menu icon for mobile */
-          font-size: 1.25rem;
-          color: #000000;
-          margin-left: 10px;
-        }
-        
-        .com
-
-        .com-menu {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          position: relative; /* Change position to relative */
-          opacity: 1;
-          transition: all 0.5s ease-out;
-          z-index: 1;
-          align-content: center;
-          text-align: center;
-          margin-top: 20px; /* Add margin to push the other section down */
-        }
+      .com-icon {
+        display: flex; /* Show menu icon for mobile */
+        font-size: 1.25rem;
+        color: #000000;
+        margin-left: 10px;
+      }
       
-        .com-menu.active {
-          left: 0;
-          opacity: 0.9;
-          transition: all 0.5s ease;
-          height: auto; /* Changed height to auto for mobile */
-        }
+      .com-menu {
+        display: none;
+      }
       
+      /* Keep the default styles for desktop */
+      .com-menu.active {
+        display: block;
+      }
       
-
     }
     @media only screen and (max-width: 650px){
 
