--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -91,15 +91,18 @@
 }
 
 .us-image {
-  object-fit: cover;
-  overflow: hidden;
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
-  width: 100%;
-  height: 450px; /* Set the height to 100% of its container */
-  position: relative;
-  z-index: -1;
-  background: url('./images/berkeley-home.jpg') center center;
-  background-size: cover; /* Use cover to fill the container */
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    object-fit: cover;
+    overflow: hidden;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
+    width: 100%;
+    height: 450px; /* Set the height to 100% of its container */
+    position: relative;
+    z-index: -1;
+    background: url('./images/berkeley-home.jpg') center center;
+    background-size: cover; /* Use cover to fill the container */
 }
 
 /* .rows{
