--- a/src/components/Committee.css
+++ b/src/components/Committee.css
@@ -180,6 +180,7 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    text-align: center;
   }
   
   .back-btn:hover{
