--- a/src/components/CommitteePage.css
+++ b/src/components/CommitteePage.css
@@ -46,7 +46,7 @@
     line-height: 30px;
 }
 
-.back-btn{
+.guide-btn{
     color: black;
     display: flex;
     width: 250px;
@@ -64,7 +64,7 @@
     margin: 5vh;
   }
 
-  .back-btn:hover{
+  .guide-btn:hover{
     width: 270px;
     height: 57px;
     font-size: 17px;
