--- a/src/components/CommitteePage.css
+++ b/src/components/CommitteePage.css
@@ -13,7 +13,7 @@
     justify-content: center;
     background-size: cover; /* Use cover to fill the container */
     background: black;
-    filter: brightness(80%)
+    filter: brightness(70%)
 
 }
 
@@ -25,14 +25,14 @@
     color: white;
     text-align: center;
     color: #fff;
-    font-size: 3rem;
+    font-size: 2.75rem;
     font-weight: 500;
     align-items: center;
     width: 70%;
 }
   
 .com-name{
-    font-size: 2rem;
+    font-size: 1.75rem;
     font-weight: 500;
     text-align: center;
     align-self: center;
@@ -41,7 +41,7 @@
 }
 
 .description{
-    width: 70%;
+    width: 80%;
     align-self: center;
     line-height: 30px;
 }
@@ -62,12 +62,13 @@
     align-self: center;
     text-decoration: none;
     margin: 5vh;
+    text-align: center;
   }
 
   .guide-btn:hover{
     width: 270px;
     height: 57px;
-    font-size: 17px;
+    font-size: 16.5px;
   }
 
 .chair-box{
@@ -101,4 +102,57 @@
 
 .chair-container{
     display: flex;
+}
+
+.position{
+    font-size: 1.5rem;
+    margin: 10px;
+    margin-top: 0;
+}
+
+.back-button{
+    color: black;
+    display: flex;
+    width: 250px;
+    height: 55px;
+    border-radius: 15px;
+    border-color: #00000000;
+    background: rgb(152, 188, 244);
+    font-weight: 500;
+    font-size: 15px;
+    transition: width 0.4s ease-out, height 0.4s ease-out, font-size 0.4s ease-out;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    text-decoration: none;
+    margin: 5vh;
+    text-align: center;
+}
+
+@media only screen and (max-width: 900px) {
+    .chair-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .chair-box{
+        width: 80vw;
+    }
+
+    .chairs-bio{
+        font-size: 1rem;
+        font-weight: normal;
+        line-height: 30px;
+        width: 80vw;
+    }
+
+    .photo{
+        width: 50vw;
+        height: 60vw;
+        object-fit: cover;
+        margin: 20px;
+        size: contain;
+    }
+    
 }
