--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,8 +24,8 @@
   justify-self: start;
   cursor: pointer;
   text-decoration: none;
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 2.2rem;
+  font-weight: 800;
   display: flex;
   align-items: center;
   height: 40px;
@@ -104,6 +104,12 @@
   padding: 10px;
   text-decoration: none;
   color: black
+}
+
+.poppins-light {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 @media screen and (max-width: 960px) {
