--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -8,6 +8,7 @@
   width: 70vw;
   display: flex;
   flex-direction: row;
+  margin-bottom: 10vh;
 }
 
 .cards__item__inner {
@@ -57,9 +58,8 @@
 .title {
   color: #252e48;
   font-size: 20px;
-  line-height: 30px;
+  line-height: 50px;
   text-align: left;
-  margin-top: 8px;
   margin-left: 10%;
   font-weight: 450;
   color: rgb(0, 0, 0);
@@ -82,6 +82,7 @@
   font-size: 30px;
   font-weight: 800;
   margin-left: 10%;
+  margin-bottom: 2%;
 }
 
 .bio-text {
@@ -120,6 +121,8 @@
       .individual-cards{
         flex-direction: column;
         align-items: center;
+        margin-bottom: 0;
+        
       }
 
       .cards__item__inner{
@@ -138,14 +141,16 @@
     .cards__item__text,
     .email,
     .name,
-    .title,
-    .bio-text{
+    .title{
       align-content: center;
       align-self: center;
       text-align: center;
       margin-left: 0;
-      width: 80vw;
+    }
 
+    .cards__item__text,
+    .bio-text{
+      width: 80vw;
     }
   
 }
