--- a/src/components/Committee.css
+++ b/src/components/Committee.css
@@ -319,7 +319,7 @@
         color: #252e48;
         font-size: 20px;
         line-height: 30px;
-        text-align: left;
+        text-align: center;
         font-weight: 450;
         color: rgb(0, 0, 0);
       }
