--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -56,7 +56,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  padding: 1rem 1rem; /* Adjusted padding */
+  padding: 0.7rem ;
   height:100%;
   transition: font-size 0.2s; /* Added transition */
 }
