--- a/src/components/CommitteePage.css
+++ b/src/components/CommitteePage.css
@@ -137,6 +137,7 @@
 
 @media only screen and (max-width: 900px) {
     .chair-container{
+        margin-top: 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -144,6 +145,8 @@
 
     .chair-box{
         width: 80vw;
+        display: flex;
+        flex-direction: column;
     }
 
     .chairs-bio{
